# 15618-final

./: .gitignore  .gitmodules  README.md  bencher.py  bencher1.py  front.css  helper.txt  sample.py
autodiff/: CMakeLists.txt  __init__.py  build.sh  functional.py
autodiff/blas/: bindings.cpp  blas.cpp  blas.cu  blas.h
autodiff/core/: exceptions.py  internal.py  operations.py  tensor.py
autodiff/neural/: layer.py  loss.py  optimizer.py
autodiff/tensorlib/: __init__.py  __init__.pyi  bindings.cpp  kernel.cu  tensor.cpp  tensor.cu  tensor.h
test/: mnist.py  pytorch.py
web/: front.css  template.html
